--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <section class="sec-01">
         <div class="container">
-            <div class="logo-title"><img src="img/logo3.png"></div>
-            <h2 class="main-title"><img src="img/title.png"> </h2>
+            <div class="logo-title"><img src="logo3.png"></div>
+            <h2 class="main-title"><img src="title.png"> </h2>
             <div class="content">
 <div class="image">
     <img src="CD.jpg">
@@ -42,7 +42,7 @@
             <h3 class="section-title">Ouça nossas músicas</h3>
             <div class="content">
                 <div class="image">
-                    <img class="rotate" src="img/logo2.png" alt="" srcset="">
+                    <img class="rotate" src="logo2.png" alt="" srcset="">
                 </div>
                 <div class="info">
                     <h4 class="info-title"> Player  </h4>
@@ -108,20 +108,20 @@
                     <div class="warp">
                         <div class="parente-img">
         
-                            <div class="img" style="background-image: url('/img/1.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/2.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/3.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/4.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/5.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/6.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/15.png');"></div>
-                            <div class="img" style="background-image: url('/img/8.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/9.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/10.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/11.jpg');"></div>
-                            <div class="img" style="background-image: url('/img/13.png');"></div>
-                            <div class="img" style="background-image: url('/img/16.png');"></div>
-                            <div class="img" style="background-image: url('/img/7.jpg');"></div>
+                            <div class="img" style="background-image: url('/1.jpg');"></div>
+                            <div class="img" style="background-image: url('/2.jpg');"></div>
+                            <div class="img" style="background-image: url('/3.jpg');"></div>
+                            <div class="img" style="background-image: url('/4.jpg');"></div>
+                            <div class="img" style="background-image: url('/5.jpg');"></div>
+                            <div class="img" style="background-image: url('/6.jpg');"></div>
+                            <div class="img" style="background-image: url('/15.png');"></div>
+                            <div class="img" style="background-image: url('/8.jpg');"></div>
+                            <div class="img" style="background-image: url('/9.jpg');"></div>
+                            <div class="img" style="background-image: url('/10.jpg');"></div>
+                            <div class="img" style="background-image: url('/11.jpg');"></div>
+                            <div class="img" style="background-image: url('/13.png');"></div>
+                            <div class="img" style="background-image: url('/16.png');"></div>
+                            <div class="img" style="background-image: url('/7.jpg');"></div>
                         </div>
                     </div> 
                 </div>
@@ -136,7 +136,7 @@
         <h3 class="section-title">Somos a Banda Encontro Distante</h3>
         <div class="content">
             <div class="video-play">
-                <video class="content-video"controls> <source src="/img/video1.mp4" ><source src="/img/video1.mp4" ></video>
+                <video class="content-video"controls> <source src="/video1.mp4" ><source src="/video1.mp4" ></video>
             </div>
             <div class="info">
                 <div class="text-box-2">
